namespace SurveyApp.Web.Dtos
{
    public class TextEntry
    {
        public int TextId { get; set; }

        public string Text { get; set; }
    }
}
