@startuml DataModel
class User {
   -int Id
   -string Email
   -string EnglishLevelSelfDefined
   -string EnglishLevelCertified
   -Survey[] Surveys
   -DateTime CreatedDate
   -DateTime LastModifiedDate
}

class Survey{
   -int Id
   -Mapping[] Mappings
   -bool IsCompleted
   -bool IsDeleted
   -DateTime CreatedDate
   -DateTime LastModifiedDate
}

class CategoryTextMapping {
   -int Id
   -TextEntry TextEntry
   -Category Category
   -bool IsDeleted
   -DateTime CreatedDate
   -DateTime LastModifiedDate
}

class TextEntry {
   -int Id
   -string Text
}

class Category {
   -int Id
   -string Name
}

User --> "many" Survey : contains
Survey --> "many" CategoryTextMapping : contains
TextEntry <-- CategoryTextMapping
Category <-- CategoryTextMapping
@enduml
